--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <script src='../vendor/prefixfree.min.js'></script>
 </head>
 <body>
+  <!-- início do código...-->
   <div class='container'>
     <h1><a href=''>O que eu mais gosto em São Paulo</a></h1>
-
     <div class='places'>
       <div class='place'>
         <h2>Passear na Avenida Paulista!</h2>
